# wix-scraper

./: .gitignore  README.md  config.py  pyproject.toml
utils/: extract_artifacts.py  extract_artifacts_v1.py  scrape.py  summarize.py
utils/configs/: config.py  prompt.py
utils/diffscripts/: diffgen.py
utils/multimedia/: pdfhandler.py
